# kr_trace_query

./: 2014-05-08-14-50-10.bag  CMakeLists.txt  TODO.org  kr-trace-query.asd  package.xml
asdf/: kr-trace-query.asd
src/: experiment.lisp  extract-actions.lisp  interesting-queries.lisp  owl-read-macro.lisp  package.lisp  prada-interface.lisp  queries.lisp  rviz.lisp  sandbox.fasl  sandbox.lisp  time.lisp  unused.lisp  vistools.lisp  worldstate.lisp
