<package>
  <name>kr_trace_query</name>
  <version>0.0.1</version>
  <description>
      tools for extracting knowledge from execution traces
  </description>

  <author email="dimarco@ipvs.uni-stuttgart.de">Daniel Di Marco</author>
  <maintainer email="dimarco@ipvs.uni-stuttgart.de">Daniel Di Marco</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/</url>
  <!-- <url type="bugtracker">https://github.com/cram-code/cram_core/issues</url> -->
  <!-- <url type="repository">https://github.com/cram-code/cram_core</url> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>sbcl</build_depend>
  <!-- <build_depend>alexandria</build_depend> -->
  <build_depend>re_pl_utils</build_depend>

  <run_depend>sbcl</run_depend>
  <run_depend>re_pl_utils</run_depend>
  <run_depend>cl_mongo</run_depend>
  <run_depend>cl_store</run_depend>
  <run_depend>alexandria</run_depend>
  <run_depend>cl_local_time</run_depend>
  <run_depend>cl_semantic_map_utils</run_depend>
  <run_depend>cl_prada</run_depend>
  <run_depend>pr2_reachability_costmap</run_depend>
  <run_depend>visualization_msgs</run_depend>
</package>

